fix(wordpress): v1.0.25 - Fix default security context for Apache port binding
BREAKING FIX: Chart now works out-of-the-box with official WordPress Apache image

- Changed containerSecurityContext.runAsUser from 33 to 0 (root)
- Changed containerSecurityContext.runAsNonRoot from true to false
- Apache requires root to bind to port 80, then drops to www-data

The previous defaults (runAsNonRoot: true, runAsUser: 33) caused:
  'Permission denied: could not bind to address 0.0.0.0:80'

This is the standard Apache privilege model and is secure.

--- a/wordpress/values.yaml
+++ b/wordpress/values.yaml
@@ -194,18 +194,20 @@ podSecurityContext:
   fsGroup: 33 # www-data group for official WordPress
 
 ## Configure Container Security Context
+## NOTE: Official WordPress Apache image requires root to bind to port 80.
+## Apache starts as root, binds to port 80, then drops privileges to www-data.
+## This is standard Apache behavior and is secure.
 containerSecurityContext:
   enabled: true
   seLinuxOptions: {}
-  runAsUser: 33 # www-data user for official WordPress
-  runAsGroup: 33 # www-data group for official WordPress
-  runAsNonRoot: true
+  runAsUser: 0     # Root required - Apache binds to port 80, then drops to www-data
+  runAsGroup: 0
+  runAsNonRoot: false  # Must allow root for port 80 binding
   privileged: false
   readOnlyRootFilesystem: false # WordPress needs to write to filesystem
   allowPrivilegeEscalation: false
   capabilities:
     drop: ["ALL"]
-    # No capabilities needed when using non-privileged ports (8080/8443)
   seccompProfile:
     type: "RuntimeDefault"
 
