--- a/wordpress/values.yaml
+++ b/wordpress/values.yaml
@@ -208,6 +208,7 @@ containerSecurityContext:
   allowPrivilegeEscalation: false
   capabilities:
     drop: ["ALL"]
+    add: ["NET_BIND_SERVICE"]  # Required to bind to port 80
   seccompProfile:
     type: "RuntimeDefault"
 
