--- a/wordpress/Chart.yaml
+++ b/wordpress/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: wordpress
-description: A Helm chart for WordPress using the official WordPress Docker image
+description: A Helm chart for WordPress using BySamio non-root Docker image (runs as UID 1001 on port 8080)
 type: application
-version: 1.0.27
+version: 2.0.0
 appVersion: "6.9.0"
 keywords:
   - wordpress
