fix: Update Keycloak icon URL to valid GitHub avatar

--- a/keycloak/Chart.yaml
+++ b/keycloak/Chart.yaml
@@ -15,7 +15,7 @@ keywords:
   - authentication
   - authorization
 home: https://www.keycloak.org/
-icon: https://www.keycloak.org/resources/images/keycloak_icon_512px.svg
+icon: https://avatars.githubusercontent.com/u/4921466?s=200&v=4
 sources:
 - https://github.com/bysamio/charts
 - https://github.com/bysamio/images
