docs: add comprehensive configuration documentation to Memcached chart
- Add detailed configuration tables for all parameters following Keycloak/PostgreSQL format
- Document all global, common, image, authentication, and memcached-specific parameters
- Include service, metrics, network policy, and autoscaling parameters
- Fix broken icon URL (from docker-library to memcached.org)
- Bump Memcached chart version from 1.0.1 to 1.0.2 for ArtifactHub update
- Update Keycloak PostgreSQL dependency version to 1.0.1

--- a/memcached/Chart.yaml
+++ b/memcached/Chart.yaml
@@ -2,10 +2,10 @@ apiVersion: v2
 name: memcached
 description: Memcached caching system deployment using official Docker images
 type: application
-version: 1.0.1
+version: 1.0.2
 appVersion: "1.6.24"
 home: https://memcached.org/
-icon: https://github.com/docker-library/docs/raw/master/memcached/logo.png
+icon: https://www.memcached.org/logo.png
 sources:
   - https://github.com/bysamio/charts
   - https://github.com/memcached/memcached
